@@ -131,6 +131,43 @@ namespace MySql.Data.MySqlClient.Tests
 			Thread.CurrentThread.CurrentCulture = curCulture;
 			Thread.CurrentThread.CurrentUICulture = curUICulture;
 		}
+
+        /// <summary>
+        /// Bug #29931  	Connector/NET does not handle Saudi Hijri calendar correctly
+        /// </summary>
+        [Test]
+        public void ArabicCalendars()
+        {
+            execSQL("DROP TABLE IF EXISTS test");
+            execSQL("CREATE TABLE test(dt DATETIME)");
+            execSQL("INSERT INTO test VALUES ('2007-01-01 12:30:45')");
+
+            CultureInfo curCulture = Thread.CurrentThread.CurrentCulture;
+            CultureInfo curUICulture = Thread.CurrentThread.CurrentUICulture;
+            CultureInfo c = new CultureInfo("ar-SA");
+            Thread.CurrentThread.CurrentCulture = c;
+            Thread.CurrentThread.CurrentUICulture = c;
+
+            try
+            {
+                MySqlCommand cmd = new MySqlCommand("SELECT dt FROM test", conn);
+                DateTime dt = (DateTime)cmd.ExecuteScalar();
+                Assert.AreEqual(2007, dt.Year);
+                Assert.AreEqual(1, dt.Month);
+                Assert.AreEqual(1, dt.Day);
+                Assert.AreEqual(12, dt.Hour);
+                Assert.AreEqual(30, dt.Minute);
+                Assert.AreEqual(45, dt.Second);
+            }
+            catch (Exception ex)
+            {
+                Assert.Fail(ex.Message);
+            }
+
+            Thread.CurrentThread.CurrentCulture = curCulture;
+            Thread.CurrentThread.CurrentUICulture = curUICulture;
+        }
+    }
 #endif
     }
 }
